--- a/wwwroot/.github/workflows/main.yml
+++ b/wwwroot/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-
+    branchs: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -39,7 +39,7 @@ jobs:
         run: dotnet build -c Release --no-restore
 
       - name: Publish .NET
-        run: dotnet publish BlzDplGhPg.csproj -c:Release -o docs --nologo
+        run: dotnet publish IMC.csproj -c:Release -o docs --nologo
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
